syntax = "proto2";

package model;

option java_package = "model";
option java_outer_classname = "SystemInfoProtos";

message SystemInfo {
  required uint64 timestamp = 1;
  optional uint64 freeMemory = 2;
  optional uint64 totalMemory = 3;
  optional uint64 maxMemory = 4;
  optional float cpuUsage = 5;
}